--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.9.8",
-    "puppeteer": "^21.7.0"
+    "resend": "^2.1.0"
   },
   "engines": {
     "node": ">=18.0.0"
